--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.data.mongodb.database=test
 spring.thymeleaf.mode=HTML5
 #在构建URL时添加到视图名称前的前缀（默认值：classpath:/templates/）
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.cache=false
